Update business card and add content to pages
I removed the contact page and moved contact info into the business
card area. I also added a picture to the business card. I am still
using the buzz on the moon placeholder. I also added some content
and styling to the about page. I replaced the contact page with a
games page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- name: Projects
+- name: Games
   link: /
+- name: Projects
+  link: /projects.html
 - name: About
   link: /about.html
-- name: Contact
-  link: /contact.html
 - name: Lists
   link: /lists.html
