Create a lists collection and page
I added a lists collection and 2 list documents. I want to be able to
share the lists I create. I also want to prepare for a blog page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,17 @@
+collections:
+  lists:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "lists"
+    values:
+      layout: "list"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+
 sass:
   style: compressed
